Horizontal scrolling on Homepage fixed

--- a/src/components/Courses/Courses.css
+++ b/src/components/Courses/Courses.css
@@ -66,6 +66,13 @@
     text-align: right;
 }
 
+.courseResultsBtn button {
+    background: none;
+    color: #f6f6f6;
+    font-size: 18px;
+    border: none;
+}
+
 .courseResultsDiv h3 {
     font-size: 1rem;
 }
