--- a/src/components/Todos/Todos.css
+++ b/src/components/Todos/Todos.css
@@ -81,6 +81,13 @@
     text-align: right;
 }
 
+.todoResultsBtn button {
+    background: none;
+    color: #f6f6f6;
+    font-size: 18px;
+    border: none;
+}
+
 .todoResultPara {
     text-align: center;
     font-size: 14px;
